--- a/public/main.css
+++ b/public/main.css
@@ -1,9 +1,24 @@
+.editInput {
+    display: inline-block;
+    line-height: 38px;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 1px solid #bbb;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 .container {
     margin-top: 100px;
 }
 
+.button {
+    padding: 0 15px;
+}
+
 .textCenter {
-    text-align: center
+    text-align: center;
 }
 
 #loaderGif {
