--- a/public/main.css
+++ b/public/main.css
@@ -7,6 +7,7 @@
     border: 1px solid #bbb;
     border-radius: 4px;
     box-sizing: border-box;
+    margin-bottom: 0;
 }
 
 .container {
@@ -14,11 +15,17 @@
 }
 
 .button {
-    padding: 0 15px;
+    padding: 0 14px;
+    font-size: 0.8em;
+    margin-bottom: 0;
 }
 
 .textCenter {
     text-align: center;
+}
+
+.bottomBorderBlue {
+    border-bottom-color: #1EAEDB;
 }
 
 #loaderGif {
